Fix some overflow's with long words.

--- a/examples/assets/sass/editor.scss
+++ b/examples/assets/sass/editor.scss
@@ -6,7 +6,9 @@
   &__content {
 
     word-wrap: break-word;
-
+    
+    word-break: break-all;
+    
     * {
       caret-color: currentColor;
     }
